# BlindTestPlayListCreator

./: .clang-format  CMakeLists.txt
include/: Playlist.hpp  lib_btplcreator.hpp  mainframe.hpp
src/: Playlist.cpp  btplcreator_main.cpp  btplcreator_mainGUI.cpp  lib_btplcreator.cpp  mainframe.cpp
